@@ -3,11 +3,6 @@
   "uniques": 12,
   "clones": [
     {
-      "timestamp": "2023-07-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-05T00:00:00Z",
       "count": 13,
       "uniques": 8
@@ -39,6 +34,11 @@
     },
     {
       "timestamp": "2023-07-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
