@@ -1,3 +1,12 @@
+2023-07-15T16:14:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5563103114 # 993
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
+* notice: last 14d: unq all: 12 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 108 128 / 125 150
+* notice: next accum: outdated-unq outdated-all / unq all: 109 129 / 126 151
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-07-01] / [2023-07-15]
+
 2023-07-13T08:16:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5540721867 # 986
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
